# EE-Toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: business-stakeholder.md  customer-stakeholder.md  development-lead.md  product-owner.md  quality-assurance.md  regulatory-stakeholder.md  system-architect.md  usability-validation.md  user-stakeholder.md  verification-lead.md
flows/expectationeering-flow/: Example.feature  Expectationeering-Workbook.docx  expectationeering-workbook.md  flow.md
inputs/: Project_Description.docx  Project_Description.md
outputs/2026-06-03/: Project_Description_Workbook.docx  run-stats.md
outputs/2026-06-09/: Project_Description_Workbook.docx  Project_Description_Workbook.md  run-stats.md
outputs/2026-06-11/: Project_Description_Workbook.docx  run-stats.md
outputs/2026-06-11 (Fable)/: Project_Description_Workbook.docx  Project_Description_Workbook.md  run-stats.md
outputs/2026-06-11 (Opus)/: Project_Description_Workbook.md
scripts/: md_to_docx.py  populate_docx.py  populate_qms_docx.py
